# neurosymbolic-mcts

./: .gitignore  ARCHITECTURE.md  BENCHMARKING.md  BENCHMARKS.md  CUDA_TC_ANALYSIS.md  Cargo.toml  DESIGN_DECISIONS.md  Dockerfile  EFFICIENCY_TRACKING.md  HYPERPARAMETERS.md  README.md  RESEARCH.md  STREAM_OF_CONSCIOUSNESS_LOGGER.md  TESTING.md  bundle.xml  bundle_repo.py  files  mcts_tree.dot  requirements.txt
.github/workflows/: cuda-build.yml  experiments.yml  rust.yml
cuda/: CMakeLists.txt  README.md  apply_move.cu  apply_move.cuh  block_forward.cu  block_forward.cuh  block_ops.cu  block_ops.cuh  block_ops_batched.cu  block_ops_batched.cuh  common.cuh  mcts_kernel.cu  mcts_kernel.cuh  movegen.cu  movegen.cuh  movegen_tables.cuh  nn_forward.cu  nn_forward.cuh  nn_ops.cu  nn_ops.cuh  nn_weights.cu  nn_weights.cuh  pesto_tables.cuh  quick_checks.cu  quick_checks.cuh  quiescence.cu  quiescence.cuh  selfplay.cu  selfplay.cuh  selfplay_main.cu  transformer_forward.cu  transformer_forward.cuh  transformer_ops.cu  transformer_ops.cuh  transformer_weights.cu  transformer_weights.cuh  tree_store.cu  tree_store.cuh
cuda/test/: bench_forward_b2.cu  bench_throughput.cu  test_attn_debug.cu  test_batched_conv_scaling.cu  test_block_ops.cu  test_budget_reuse.cu  test_helpers.cuh  test_layer_timing.cu  test_mcts_kernel.cu  test_movegen.cu  test_multi_tree_eval.cu  test_nn_ops.cu  test_pool_assertions.cu  test_profile_latency.cu  test_quick_checks.cu  test_quiescence.cu  test_selfplay.cu  test_selfplay_and_ops.cu  test_transformer.cu  test_transformer_vs_pytorch.cu  test_tree_store.cu
examples/: benchmark_gates.rs  mate_search_tt_demo.rs  neural_integration_demo.rs  tactical_benchmark.rs  tactical_cache_demo.rs  tactical_profiler.rs  verify_features.rs  verify_tactical_graft.rs
gui/: index.html
python/: README.md  calibration_test.py  chess_net.py  compare_optimizers.py  export_model.py  export_transformer_weights_cuda.py  export_weights_cuda.py  model.py  muon.py  orchestrate.py  plot_training.py  replay_buffer.py  test_architectures.py  test_orchestrate.py  test_replay_buffer.py  test_train.py  train.py  train_chess_ai.py  training_pipeline.py
results/: ablation_results.json  ablation_table.tex  test_results.csv  test_results.tex
results/figures/: summary.md
scripts/: alternating_runs.sh  analyze_results.py  gen_transformer_reference.py  generate_figures.py  plot_10model_tournament.py  plot_tournament.py  plot_tournament_from_json.py  round_robin_tournament.py  run_paper_experiments.sh  test.sh
src/: agent.rs  board.rs  board_utils.rs  boardstack.rs  egtb.rs  eval.rs  eval_constants.rs  lib.rs  magic_bitboard.rs  main.rs  make_move.rs  move_generation.rs  move_types.rs  neural_net.rs  nnue.rs  piece_types.rs  tensor.rs  training_data.rs  transposition.rs  uci.rs
src/benchmarks/: elo_estimation.rs  elo_tournament.rs  mod.rs  performance.rs  strength_testing.rs  tactical_suite.rs
src/experiments/: config.rs  metrics.rs  mod.rs  position_classifier.rs
src/mcts/: inference_server.rs  mod.rs  neural_mcts.rs  nn_counter.rs  node.rs  policy.rs  search_logger.rs  selection.rs  simulation.rs  sprt.rs  tactical.rs  tactical_mcts.rs
src/mcts/unit_tests/: mcts_integration_tests.rs  selection_tests.rs
src/search/: alpha_beta.rs  history.rs  iterative_deepening.rs  koth.rs  mate_search.rs  mod.rs  quiescence.rs  see.rs
src/tuning/: mod.rs
tests/: mate_portfolio_tests.rs  mcts_tests.rs  neural_integration_tests.rs  perft_tests.rs  search_tests.rs  test_torchscript_export.py  test_transformer_python.py
tests/common/: mod.rs
tests/integration/: mcts_integration_tests.rs  mod.rs
tests/property/: invariant_tests.rs  mod.rs
tests/regression/: mod.rs  recent_fixes_tests.rs
tests/unit/: agent_tests.rs  alpha_beta_tests.rs  board_tests.rs  evaluate_models_tests.rs  experiment_config_tests.rs  experiment_metrics_tests.rs  ext_qsearch_tests.rs  graphviz_tests.rs  hash_tests.rs  history_tests.rs  inference_server_tests.rs  iterative_deepening_tests.rs  koth_tests.rs  magic_bitboard_tests.rs  make_move_tests.rs  mate_search_tests.rs  mod.rs  move_generation_tests.rs  neural_mcts_tests.rs  nn_counter_tests.rs  node_tests.rs  pesto_qsearch_tests.rs  position_classifier_tests.rs  quiescence_tests.rs  search_logger_tests.rs  see_tests.rs  selection_optimization_tests.rs  selection_tests.rs  self_play_loop_tests.rs  tactical_mcts_tests.rs  tensor_extended_tests.rs  tensor_tests.rs  training_diversity_tests.rs  training_pipeline_tests.rs  training_tests.rs  transposition_tests.rs  tree_reuse_tests.rs  utils_tests.rs  value_target_tests.rs
tools/: lc0_install_notes.md
