[package]
name = "kingfisher"
version = "0.1.0"
edition = "2021"

[lib]
name = "kingfisher"
path = "src/lib.rs"

[[bin]]
name = "kingfisher"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "quick_test"
path = "src/bin/quick_test.rs"

[[bin]]
name = "texel_tune"
path = "src/bin/texel_tune.rs"

[[bin]]
name = "generate_training_data"
path = "src/bin/generate_training_data.rs"

[[bin]]
name = "strength_test"
path = "src/bin/strength_test.rs"

[[bin]]
name = "self_play"
path = "src/bin/self_play.rs"

[dependencies]
rand = "0.8.5" # Added for MCTS random playouts
lazy_static = "1.5.0"
shakmaty = "0.25" # Dependency for shakmaty-syzygy
shakmaty-syzygy = "0.15.0"
rayon = "1.7"
crossbeam-channel = "0.5"
tch = { git = "https://github.com/LaurentMazare/tch-rs", branch = "main", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
neural = ["dep:tch"]

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"
criterion = "0.5"

[[test]]
name = "unit_tests"
path = "tests/unit/mod.rs"

[[test]]
name = "integration_tests"  
path = "tests/integration/mod.rs"

[[test]]
name = "property_tests"
path = "tests/property/mod.rs"

[[test]]
name = "regression_tests"
path = "tests/regression/mod.rs"


[[bin]]
name = "mcts_inspector"
path = "src/bin/mcts_inspector.rs"

[[bin]]
name = "verbose_search"
path = "src/bin/verbose_search.rs"
