[package]
name = "caissawary"
version = "0.1.0"
edition = "2021"

[lib]
name = "kingfisher"
path = "src/lib.rs"

[[bin]]
name = "caissawary"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "quick_test"
path = "src/bin/quick_test.rs"

[[bin]]
name = "texel_tune"
path = "src/bin/texel_tune.rs"

[[bin]]
name = "generate_training_data"
path = "src/bin/generate_training_data.rs"

[[bin]]
name = "strength_test"
path = "src/bin/strength_test.rs"

[[bin]]
name = "self_play"
path = "src/bin/self_play.rs"

[dependencies]
rand = "0.8.5" # Added for MCTS random playouts
rand_distr = "0.4" # Dirichlet noise for self-play exploration
lazy_static = "1.5.0"
shakmaty = "0.25" # Dependency for shakmaty-syzygy
shakmaty-syzygy = "0.15.0"
rayon = "1.7"
crossbeam-channel = "0.5"
tch = { git = "https://github.com/LaurentMazare/tch-rs", branch = "main", optional = true }
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tiny_http = "0.12"
noru = "2.2"   # NNUE inference (game-agnostic). Planned HalfKP eval for Q-search; src/nnue.rs is currently a PeSTO-delegating stub, not yet wired to noru.

[features]
default = []
neural = ["dep:tch"]
slow-tests = []

# Clippy lints deferred as stylistic/structural rather than fixed. Applied
# package-wide (lib + all bins) so `cargo clippy -- -D warnings` stays green in
# CI. These are deliberate trade-offs in a search-heavy engine (many-arg search
# functions, recursive helpers) or low-value rewrites, not latent bugs.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
if_same_then_else = "allow"
needless_range_loop = "allow"
wildcard_in_or_patterns = "allow"
while_let_loop = "allow"
unnecessary_unwrap = "allow"
should_implement_trait = "allow"
only_used_in_recursion = "allow"
needless_late_init = "allow"
manual_clamp = "allow"
format_in_format_args = "allow"
doc_overindented_list_items = "allow"

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"
criterion = "0.5"

[[test]]
name = "unit_tests"
path = "tests/unit/mod.rs"

[[test]]
name = "integration_tests"  
path = "tests/integration/mod.rs"

[[test]]
name = "perft_tests"
path = "tests/perft_tests.rs"
required-features = ["slow-tests"]

[[test]]
name = "property_tests"
path = "tests/property/mod.rs"
required-features = ["slow-tests"]

[[test]]
name = "regression_tests"
path = "tests/regression/mod.rs"


[profile.release]
debug = true
lto = "thin"
codegen-units = 1

[[bin]]
name = "mcts_inspector"
path = "src/bin/mcts_inspector.rs"

[[bin]]
name = "verbose_search"
path = "src/bin/verbose_search.rs"

[[bin]]
name = "elo_tournament"
path = "src/bin/elo_tournament.rs"

[[bin]]
name = "run_experiments"
path = "src/bin/run_experiments.rs"

[[bin]]
name = "verbose_game"
path = "src/bin/verbose_game.rs"

[[bin]]
name = "evaluate_models"
path = "src/bin/evaluate_models.rs"

[[bin]]
name = "round_robin"
path = "src/bin/round_robin.rs"

[[bin]]
name = "play_engine"
path = "src/bin/play_engine.rs"

[[bin]]
name = "profile_engine"
path = "src/bin/profile_engine.rs"

[[bin]]
name = "qsearch_gui"
path = "src/bin/qsearch_gui.rs"
